--- a/ToDo/BLL/BLL.csproj
+++ b/ToDo/BLL/BLL.csproj
@@ -7,12 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Contracts\" />
-      <Folder Include="Mappers\" />
-      <Folder Include="Services\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <ProjectReference Include="..\DAL\DAL.csproj" />
       <ProjectReference Include="..\Globals\Globals.csproj" />
     </ItemGroup>
 
