--- a/ToDo/WebApp/appsettings.json
+++ b/ToDo/WebApp/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=7890;Database=todolist;Username=todoUser;Password=tod0p4ssw0rd;IncludeErrorDetail=true;"
   },
+  "DataInitialization": {
+    "DropDatabase": false,
+    "MigrateDatabase": false,
+    "SeedData": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
