--- a/ToDo/docker-compose.yml
+++ b/ToDo/docker-compose.yml
@@ -13,10 +13,22 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./pg-dump:/var/lib/postgresql/dump
+  todolist-app:
+    build:
+      context: .          
+      dockerfile: Dockerfile
+    container_name: "todolist-app"
+    restart: unless-stopped
+    ports:
+      - "5000:80"
+    depends_on:
+      - postgres
+    environment:
+      - ConnectionStrings__DefaultConnection=Host=localhost;Port=7890;Database=todolist;Username=todoUser;Password=tod0p4ssw0rd;IncludeErrorDetail=true
 
 volumes:
   postgres-data:
-
+    
 networks:
   default:
     name: infra
