--- a/ToDo/WebApp/appsettings.Docker.json
+++ b/ToDo/WebApp/appsettings.Docker.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=7890;Database=todolist;Username=postgres;Password=tod0p4ssw0rd;IncludeErrorDetail=true;"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=todolist;Username=postgres;Password=tod0p4ssw0rd;IncludeErrorDetail=true;"
   },
   "DataInitialization": {
     "DropDatabase": false,
-    "MigrateDatabase": false,
-    "SeedData": false
+    "MigrateDatabase": true,
+    "SeedData": true
   },
   "Logging": {
     "LogLevel": {
