--- a/ToDo/docker-compose.yml
+++ b/ToDo/docker-compose.yml
@@ -1,34 +1,58 @@
 services:
-  postgres:
-    container_name: "todolist"
-    image: postgres
-    command: postgres -c 'max_connections=1000'
+  todo-frontend:
+    build:
+      context: ../todo-frontend
+      dockerfile: Dockerfile
+    container_name: "todo-frontend"
     restart: unless-stopped
     environment:
-      - POSTGRES_USER=todoUser
+      - NEXT_PUBLIC_API_URL=http://localhost:5066/api 
+    ports:
+      - "3000:3000"
+    networks:
+      - infra
+    depends_on:
+      - todo-backend
+
+  postgres:
+    container_name: "postgres"
+    image: postgres:15
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=tod0p4ssw0rd
       - POSTGRES_DB=todolist
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d todolist -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
-      - "7890:5432"
+      - "7890:5432"  
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./pg-dump:/var/lib/postgresql/dump
-  todolist-app:
+    networks:
+      - infra
+
+  todo-backend:
     build:
-      context: .          
+      context: .
       dockerfile: Dockerfile
-    container_name: "todolist-app"
+    container_name: "todo-backend"
     restart: unless-stopped
     ports:
-      - "5000:80"
+      - "5066:8080"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
-      - ConnectionStrings__DefaultConnection=Host=localhost;Port=7890;Database=todolist;Username=todoUser;Password=tod0p4ssw0rd;IncludeErrorDetail=true
+      - ASPNETCORE_ENVIRONMENT=Docker 
+    networks:
+      - infra
 
 volumes:
   postgres-data:
-    
+
 networks:
-  default:
-    name: infra
+  infra:
+    driver: bridge
