hot-reload for docker container

--- a/ToDo/WebApp/appsettings.json
+++ b/ToDo/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=7890;Database=todolist;Username=postgres;Password=tod0p4ssw0rd;IncludeErrorDetail=true;"
+    "DefaultConnection": "Host=localhost;Port=7890;Database=todolist;Username=postgres;Password=tod0p4ssw0rd;IncludeErrorDetail=true;"
   },
   "DataInitialization": {
     "DropDatabase": false,
