--- a/ToDo/docker-compose.yml
+++ b/ToDo/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
-  todo-frontend:
+  todo_frontend:
     build:
       context: ../todo-frontend
       dockerfile: Dockerfile
-    container_name: "todo-frontend"
+    container_name: "todo_frontend"
     restart: unless-stopped
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:5066/api 
@@ -16,7 +16,7 @@ services:
     networks:
       - infra
     depends_on:
-      - todo-backend
+      - todo_backend
 
   postgres:
     container_name: "todo_postgres"
@@ -38,11 +38,11 @@ services:
     networks:
       - infra
 
-  todo-backend:
+  todo_backend:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: "todo-backend"
+    container_name: "todo_backend"
     restart: unless-stopped
     ports:
       - "5066:8080"
